# OuroTrace

./: .gitignore  README.md  cot_generator.py  data_process.py  download.py  environment.yaml  generate_primitives.py  log.md  looped_transformer.ipynb  main.py  my_sufferings.md  ouro-trace.ipynb  ouro_trace.ipynb  pyproject.toml  refactored-looped-transformer.ipynb  requirements.txt
configs/: batch_config.json  batch_ouro_1.4b.json  batch_ouro_1.4b_thinking.json  batch_ouro_2.6b.json  batch_ouro_2.6b_thinking.json  holistic_config.json  ouro_1.4b.json  ouro_1.4b_thinking.json  ouro_2.6b.json  ouro_2.6b_thinking.json  recommend_config.json
experiment/: ouro_acc_20251212_181913.csv  ouro_config_20251212_181913.yaml  ouro_ppl_20251212_172147.csv
results/results_20251219_162147/: all_latest.csv  config.yaml  perplexity_latest.csv
results/results_20251220_103316/: all_latest.csv  perplexity_latest.csv
results/results_20251220_104629/: all_latest.csv  perplexity_latest.csv
results/results_20251220_132642/: all_latest.csv  perplexity_latest.csv
results/results_20251220_134139/: all_latest.csv  perplexity_latest.csv
results/results_20251220_141455/: all_latest.csv  perplexity_latest.csv
results/results_20251220_142511/: all_latest.csv  perplexity_latest.csv
results/results_20251220_143659/: all_latest.csv  perplexity_latest.csv
results/results_20251220_151451/: all_latest.csv  perplexity_latest.csv
results/results_20251220_153312/: all_latest.csv  perplexity_latest.csv
results/results_20251220_154128/: all_latest.csv  perplexity_latest.csv
results/results_20251220_160355/: all_latest.csv  perplexity_latest.csv
results/results_20251220_163104/: all_latest.csv  perplexity_latest.csv
results/results_20251220_165213/: all_latest.csv  perplexity_latest.csv
results/results_20251220_173652/: all_latest.csv  perplexity_latest.csv
results/results_20251221_100715/: all_latest.csv  config.yaml  perplexity_latest.csv
results/results_20251221_101646/: all_latest.csv  perplexity_latest.csv
results/results_20251221_103014/: all_latest.csv  perplexity_latest.csv
results/results_20251221_103818/: all_latest.csv
results/results_20251221_104819/: all_latest.csv  perplexity_latest.csv
results/results_20251221_105702/: perplexity_latest.csv
results/results_20251221_110924/: all_latest.csv  perplexity_latest.csv
results/results_20251221_114036/: perplexity_latest.csv
results/results_20251221_133352/: config.yaml  perplexity_latest.csv
results/results_20251221_140949/: task_templates.yaml
results/results_20251221_144050/: all_latest.csv  config.yaml  perplexity_latest.csv  task_templates.yaml
results/results_20251221_155122/: all_latest.csv  config.yaml  perplexity_latest.csv  task_templates.yaml
results/results_20251221_163414/: all_latest.csv  config.yaml  task_templates.yaml  (+1 more)
results_UT_all/: accuracy_by_ut.csv  depth_efficiency.csv  depth_generalization.csv  difficulty_scaling.csv  main_vs_reasoning_primitives.csv  param_efficiency.csv  perplexity.csv  primitive_accuracy.csv  reasoning_primitives.csv  simple_reasoning.csv  summary_combined.csv  summary_main_tasks.csv  summary_reasoning_primitives.csv  throughput.csv  variant_comparison.csv
run/: ouro_acc_20251212_172147.csv  ouro_config_20251212_172147.yaml
src/: __init__.py  analyze_results.py  batch_generation_example.py  config.py  config_loader.py  config_notebook_env.py  continous_batching.py  data.py  data_generator.py  downloader.py  evaluation.py  evaluation_analysis.py  evaluation_metrics.py  example.py  inference.py  model.py  new_model.py  new_refactored_runner.py  new_runner.py  old_runner.py  output_monitor.py  runner.py  safe_model.py  safe_optimization.py  utils.py  verify.py  wandb_example.py
(+250 files in other folders)
