[project]
name = "ourotrace"
version = "0.1.0"
description = "Experiment and Inference Optimization with ByteDance's Ouro Looped Transformer model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "bitsandbytes==0.49.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "datasets==4.4.1",
    "decorator==5.2.1",
    "dill==0.4.0",
    "executing==2.2.1",
    "filelock==3.20.0",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "lm-eval[hf]>=0.4.9.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "networkx==3.6.1",
    "numpy<2.0.0",
    "optimum>=2.1.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==5.29.3",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "seaborn==0.13.2",
    "sentry-sdk==2.47.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tokenizers==0.22.1",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.56.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.6.2",
    "uv==0.9.17",
    "wandb==0.23.1",
    "wcwidth==0.2.14",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

# Reference links
[project.urls]
"GitHub Repo" = "https://github.com/dungphieuluuky/OuroTrace.git"
"Project Reference Paper" = "https://arxiv.org/abs/2502.17416"
"ByteDance Ouro Model Paper" = "https://arxiv.org/abs/2510.25741"
"HuggingFace Model Hub" = "https://huggingface.co/collections/ByteDance/ouro"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
